--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Reproduce QTRAN."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.4.0",
+    "langchain==0.3.3",
+    "langchain-community==0.3.2",
+    "openai>=2.14.0",
     "pip>=25.3",
+    "pymysql>=1.1.2",
     "torch==2.4.1",
 ]
